fix: readability improvement

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -131,6 +131,17 @@ footer {
     z-index: 10;
 }
 
+p {
+    line-height: 2.0; /* 1.5 times the font size */
+    letter-spacing: 1px;
+}
+
+.dropdown-content {
+
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
+}
+
 /* ALL MEDIA QUERIES AT THE BOTTOM OF THE FILE */
 @media only screen and (max-width: 768px) {
     .main-card-wrapper h1 {
